<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:stretchColumns="*"
    tools:context="vikas.com.timesetchallenge.MainActivity">

    <TableRow>

        <Button
            android:id="@+id/button_1"
            style="@style/NumButtonStyle"
            android:text="@string/d_1" />

        <Button
            android:id="@+id/button_2"
            style="@style/NumButtonStyle"
            android:text="@string/d_2" />

        <Button
            android:id="@+id/button_3"
            style="@style/NumButtonStyle"
            android:text="@string/d_3" />

        <Button
            android:id="@+id/button_4"
            style="@style/NumButtonStyle"
            android:text="@string/d_4" />

        <Button
            android:id="@+id/button_5"
            style="@style/NumButtonStyle"
            android:text="@string/d_5" />

        <Button
            android:id="@+id/button_6"
            style="@style/NumButtonStyle"
            android:text="@string/d_6" />

        <Button
            android:id="@+id/button_7"
            style="@style/NumButtonStyle"
            android:text="@string/d_7" />


    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/button_8"
            style="@style/NumButtonStyle"
            android:text="@string/d_8" />

        <Button
            android:id="@+id/button_9"
            style="@style/NumButtonStyle"
            android:text="@string/d_9" />

        <Button
            android:id="@+id/button_11"
            style="@style/NumButtonStyle"
            android:text="@string/d_11" />

        <Button
            android:id="@+id/button_12"
            style="@style/NumButtonStyle"
            android:text="@string/d_12" />

        <Button
            android:id="@+id/button_13"
            style="@style/NumButtonStyle"
            android:text="@string/d_13" />

        <Button
            android:id="@+id/button_14"
            style="@style/NumButtonStyle"
            android:text="@string/d_14" />

        <Button
            android:id="@+id/button_15"
            style="@style/NumButtonStyle"
            android:text="@string/d_15" />


    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/button_17"
            style="@style/NumButtonStyle"
            android:text="@string/d_17" />

        <Button
            android:id="@+id/button_18"
            style="@style/NumButtonStyle"
            android:text="@string/d_18" />

        <Button
            android:id="@+id/button_19"
            style="@style/NumButtonStyle"
            android:text="@string/d_19" />

        <Button
            android:id="@+id/button_20"
            style="@style/NumButtonStyle"
            android:text="@string/d_20" />

        <Button
            android:id="@+id/button_21"
            style="@style/NumButtonStyle"
            android:text="@string/d_21" />

        <Button
            android:id="@+id/button_22"
            style="@style/NumButtonStyle"
            android:text="@string/d_22" />

        <Button
            android:id="@+id/button_23"
            style="@style/NumButtonStyle"
            android:text="@string/d_23" />


    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_span="7"
            android:text="@string/Result"
            android:textColor="@android:color/black"
            android:textSize="28dp"
            android:textStyle="bold" />
    </TableRow>


</TableLayout>